--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_changliu_client",
-    "short_name": "flutter_changliu_client",
+    "name": "untitled3",
+    "short_name": "untitled3",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
